[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/grid_space.gd" type="Script" id=1]

[node name="GridSpace" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
offset = Vector2( 0, -40 )
polygon = PoolVector2Array( 34.64, 20, 34.64, 60, 0, 80, -34.64, 60, -34.64, 20, 0, 0 )

[node name="s_coord" type="Label" parent="."]
modulate = Color( 0.901961, 0.101961, 0.101961, 1 )
margin_left = -35.0
margin_top = -23.0
margin_right = -11.0
margin_bottom = 3.0
rect_scale = Vector2( 1.0157, 1 )
text = "s"

[node name="q_coord" type="Label" parent="."]
modulate = Color( 0.901961, 0.101961, 0.101961, 1 )
margin_left = 9.0
margin_top = -24.0
margin_right = 33.0
margin_bottom = 2.0
rect_scale = Vector2( 1.0157, 1 )
text = "q"

[node name="r_coord" type="Label" parent="."]
modulate = Color( 0.901961, 0.101961, 0.101961, 1 )
margin_left = -10.0
margin_top = 22.0
margin_right = 14.0
margin_bottom = 48.0
rect_scale = Vector2( 1.0157, 1 )
text = "r"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2( 0, -40 )
polygon = PoolVector2Array( 34.64, 20, 34.64, 60, 0, 80, -34.64, 60, -34.64, 20, 0, 0 )

[node name="CenterDot" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, -10, 10, -10, 10, 10, -10, 10, -10, -10 )

[connection signal="input_event" from="HitBox" to="." method="_on_HitBox_input_event"]
[connection signal="mouse_entered" from="HitBox" to="." method="_on_HitBox_mouse_entered"]
[connection signal="mouse_exited" from="HitBox" to="." method="_on_HitBox_mouse_exited"]
